# archguard

./: CONTRIBUTING.md  LICENSE  README.md  RELEASE_PLAN.md  ROADMAP.md  pyproject.toml
archguard/analyzer/: __init__.py  _class_visitor.py  _rule_validator.py  module_parser.py  scanner.py  violation_reporter.py
archguard/core/: engine.py
archguard/dto/: __init__.py  class_info.py  class_rule.py  function_info.py  import_info.py  module_info.py  module_rule.py  project_root.py  rule.py  scan_result.py  violation.py
archguard/enums/: __init__.py  _str_enum.py  rule_type.py
archguard/ir/: __init__.py  index.py  keys.py  merge.py  normalize.py  select.py  types.py  validate.py
archguard/model/: types.py
archguard/plugins/: registry.py
archguard/plugins/interfaces/: __init__.py  analyzer.py
archguard/protocols/: __init__.py  class_rule_builder.py  module_parser.py  module_rule_builder.py  rule_validator.py  scanner.py  violation_reporter.py
archguard/reporting/: types.py
archguard/rules/: __init__.py  ast.py  baseline.py  builtins.py  compiler.py  errors.py  evaluator.py  explain.py  parser.py  types.py
archguard/snapshot/: types.py
archguard/utils/: enum.py
docs/: architecture.md
tests/ir/: test_index.py  test_keys.py  test_merge.py  test_normalize.py  test_select.py  test_validate.py
tests/rules/: test_ast.py  test_baseline.py  test_builtins.py  test_compiler.py  test_evaluator.py  test_explain.py  test_parser.py
tests/test_analyzer/: test_module_parser.py  test_scanner.py
